--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  /* TinyWow Inspired Light Theme */
+  /* Light Theme */
   --background: 210 20% 96%;
   /* #F3F5F7 - Light Gray */
   --foreground: 222.2 84% 4.9%;
