--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { Search, ArrowRight, FileText, Image as ImageIcon, Zap, CheckCircle, Shi
 
 ---
 
-<Layout title="AllTools - Free PDF, Image, Video & AI Tools">
+<Layout title="AllTools - Free PDF, Image, miscellaneous & AI Tools">
   <main class="min-h-[calc(100vh-4rem)]">
     
     {/* Hero Section */}
@@ -24,7 +24,7 @@ import { Search, ArrowRight, FileText, Image as ImageIcon, Zap, CheckCircle, Shi
             </span> Simple
           </h1>
           <p class="text-gray-500 text-lg md:text-xl mb-10 max-w-2xl mx-auto">
-            We offer PDF, video, image and other online tools to make your life easier
+            We offer PDF, miscellaneous, image and other online tools to make your life easier
           </p>
 
           {/* Search Bar */}
