--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ interface Props {
 }
 
 import Header from '../components/Header.tsx';
-import Footer from '../components/Footer.astro';
+import Footer from '../components/Footer';
 
 const { title, description = "Free tools for everyone. PDF, Image, AI tools and more." } = Astro.props;
 ---
@@ -33,6 +33,6 @@ const { title, description = "Free tools for everyone. PDF, Image, AI tools and 
 	<body class="min-h-screen flex flex-col">
         <Header client:load />
 		<slot />
-        <Footer />
+        <Footer client:visible />
 	</body>
 </html>
