folder structure change

--- a/src/pages/coding-tools/css-formatter.astro
+++ b/src/pages/coding-tools/css-formatter.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import CssFormatterTool from '../../components/tools/CssFormatter';
+import CssFormatterComponent from '../../components/tools/coding/CssFormatter';
 ---
 
 <Layout title="CSS Formatter - Free Online Tool">
   <main class="min-h-screen bg-gray-50 py-12">
-    <CssFormatterTool client:load />
+    <CssFormatterComponent client:load />
   </main>
 </Layout>
