--- a/src/pages/coding-tools/json-formatter.astro
+++ b/src/pages/coding-tools/json-formatter.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import JsonFormatterTool from '../../components/tools/JsonFormatter';
+import JsonFormatterComponent from '../../components/tools/coding/JsonFormatter';
 ---
 
 <Layout title="JSON Formatter & Validator - Free Online Tool">
   <main class="min-h-screen bg-gray-50 py-12">
-    <JsonFormatterTool client:load />
+    <JsonFormatterComponent client:load />
   </main>
 </Layout>
