--- a/src/pages/coding-tools/sass-to-css.astro
+++ b/src/pages/coding-tools/sass-to-css.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import SassToCssTool from '../../components/tools/SassToCss';
+import SassToCssComponent from '../../components/tools/coding/SassToCss';
 ---
 
 <Layout title="Sass to CSS Converter - Free Online Tool">
   <main class="min-h-screen bg-gray-50 py-12">
-    <SassToCssTool client:load />
+    <SassToCssComponent client:load />
   </main>
 </Layout>
