--- a/src/pages/coding-tools/diff-checker.astro
+++ b/src/pages/coding-tools/diff-checker.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import DiffCheckerTool from '../../components/tools/DiffChecker';
+import DiffCheckerComponent from '../../components/tools/coding/DiffChecker';
 ---
 
 <Layout title="Diff Checker - Free Online Tool">
   <main class="min-h-screen bg-gray-50 py-12">
-    <DiffCheckerTool client:load />
+    <DiffCheckerComponent client:load />
   </main>
 </Layout>
