--- a/src/pages/coding-tools/html-formatter.astro
+++ b/src/pages/coding-tools/html-formatter.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import HtmlFormatterTool from '../../components/tools/HtmlFormatter';
+import HtmlFormatterComponent from '../../components/tools/coding/HtmlFormatter';
 ---
 
 <Layout title="HTML Formatter - Free Online Tool">
   <main class="min-h-screen bg-gray-50 py-12">
-    <HtmlFormatterTool client:load />
+    <HtmlFormatterComponent client:load />
   </main>
 </Layout>
