--- a/src/pages/coding-tools/json-to-js.astro
+++ b/src/pages/coding-tools/json-to-js.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import JsonToJsTool from '../../components/tools/JsonToJs';
+import JsonToJsComponent from '../../components/tools/coding/JsonToJs';
 ---
 
 <Layout title="JSON to JS Object Converter - Free Online Tool">
   <main class="min-h-screen bg-gray-50 py-12">
-    <JsonToJsTool client:load />
+    <JsonToJsComponent client:load />
   </main>
 </Layout>
